playground/helmfile/platform/envoy/referencegrant-oathkeeper-api.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-ext-auth-to-oathkeeper-api
  namespace: auth
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: default
  to:
    - group: ""
      kind: Service
      name: oathkeeper-api
