playground/helmfile/platform/envoy/ext-auth-oathkeeper.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: ext-auth-foundry-api
  namespace: default
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: foundry-api
  extAuth:
    http:
      backendRefs:
        - group: ""
          kind: Service
          name: oathkeeper-api
          namespace: auth
          port: 4456
      path: /decisions
      headersToBackend:
        - x-subject
        - x-email
